--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   schedule:
     - cron: "02 12 * * *"
-
-env:
-  DEVOPS_DIR: devops
-  
+    
   # Allows you to run this workflow manually from the Actions tab
 workflow_dispatch:
 
@@ -20,18 +17,33 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+  steps:
+    - name: checkout repo content
+      uses: actions/checkout@v2 # checkout the repository content to github runner.
+    - name: setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8 #install the python needed
+    - name: execute py script # run the run.py to get the latest data
+      run: |
+        python run.py
+      env:
+        key: ${{ secrets.key }} # if run.py requires passwords..etc, set it as secrets
+    - name: export index
+      .... # use crosponding script or actions to help export.
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: jannekem/run-python-script-action@v1
-        with:
-          script: |
-            import os
-            print("Directory contents:")
-            for f in os.listdir():
-                print(f)
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions/setup-python@v2
+#      - uses: jannekem/run-python-script-action@v1
+#        with:
+#          script: |
+#            import os
+#            print("Directory contents:")
+#            for f in os.listdir():
+#                print(f)
 
 #    - name: Check-out devops repository
 #      uses: actions/checkout@v2
