--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
         env:
           TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
           TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
+          FROM_NUM: ${{ secrets.FROM_NUM }}
+          TO_NUM: ${{ secrets.TO_NUM }}
         run: python raincheck.py
-
-      
